--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=birdyard
+
+spring.datasource.url=jdbc:mysql://birdyard-db.catyae6uyg6y.us-east-1.rds.amazonaws.com:3306/birdyard?useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=Monashta18
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
