--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=birdyard
 
-spring.datasource.url=jdbc:mysql://birdyard-db.catyae6uyg6y.us-east-1.rds.amazonaws.com:3306/birdyard?useSSL=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=Monashta18
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.org.hibernate.SQL=DEBUG
